#2726 Legend occupies too much space in reports screen
Added:
- calculatePointNameForReport method for for each point graph names to make them parse correctly
- Truncate parameterized Junit tests
- Suites to group up tests for StringUtils and ImageChartUtils

Changed:
- Length of point and data source name so they are truncated to length that database accept
- Way of truncating names, now "..." are added at the end of extended name